[tool.poetry]
name = "vin_chest"
version = "0.1.0"
description = ""
authors = ["Rodolphe <rodolphe.lampe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.75.0"
pandas = "^1.2.1"
numpy = "^1.19.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
